{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 698,
  "lineage": "1ff520fb-970f-350a-df93-316a161ea939",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wgpark_eip_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c5ebf0c3cbbab4ac",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-30-201.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.30.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wgpark_eip_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b58ffe1b94712e75",
            "domain": "vpc",
            "id": "eipalloc-06511d2ab821820c8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c9b2059d81517cc0",
            "private_dns": "ip-192-168-0-211.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.211",
            "public_dns": "ec2-15-164-144-141.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.144.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wgpark_eip_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0635a919fb70c3e70",
            "domain": "vpc",
            "id": "eipalloc-0e80cae9a78e7b31f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-038914f84d1ac726d",
            "private_dns": "ip-192-168-1-90.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.90",
            "public_dns": "ec2-3-37-212-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.212.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:instance/i-07d9422218e68f1ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d9422218e68f1ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_terraform_tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024112470dc01ef8f",
            "private_dns": "ip-192-168-0-86.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.86",
            "public_ip": "3.34.146.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088876cec4deb70ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b66a5d07514cd985"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0532eef20b314707f",
            "tags": {
              "Name": "wgpark-insatnce-wordpress"
            },
            "tags_all": {
              "Name": "wgpark-insatnce-wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b66a5d07514cd985"
            ]
          },
          "dependencies": [
            "aws_security_group.wgpark_allow_http",
            "aws_subnet.wgpark_puba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wgpark_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:internet-gateway/igw-08cd151d30d915311",
            "id": "igw-08cd151d30d915311",
            "owner_id": "701558900840",
            "tags": {
              "Name": "wgpark"
            },
            "tags_all": {
              "Name": "wgpark"
            },
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wgpark_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:loadbalancer/app/wgpark-asg-example/4dd0d574869efb27",
            "arn_suffix": "app/wgpark-asg-example/4dd0d574869efb27",
            "dns_name": "wgpark-asg-example-546806024.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:loadbalancer/app/wgpark-asg-example/4dd0d574869efb27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wgpark-asg-example",
            "security_groups": [
              "sg-08eb0105bf0b7fedd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0532eef20b314707f"
              },
              {
                "subnet_id": "subnet-0f743af8f9b70879c"
              }
            ],
            "subnets": [
              "subnet-0532eef20b314707f",
              "subnet-0f743af8f9b70879c"
            ],
            "vpc_id": "vpc-02eaf698ece68e472",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.wgpark_alb",
            "aws_subnet.wgpark_puba",
            "aws_subnet.wgpark_pubc",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wgpark_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:listener/app/wgpark-asg-example/4dd0d574869efb27/ec37cd93eb7a0b20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:listener/app/wgpark-asg-example/4dd0d574869efb27/ec37cd93eb7a0b20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:loadbalancer/app/wgpark-asg-example/4dd0d574869efb27",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wgpark_vpc",
            "aws_lb.wgpark_lb",
            "aws_lb_target_group.wgpark_lb_target_group",
            "aws_security_group.wgpark_alb",
            "aws_subnet.wgpark_puba",
            "aws_subnet.wgpark_pubc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wgpark_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74",
            "arn_suffix": "targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wgpark-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74-20211018083120093000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:701558900840:targetgroup/wgpark-lb-target-group/e19077ab8e2ebf74",
            "target_id": "i-07d9422218e68f1ea"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.wgpark_lb_target_group",
            "aws_security_group.wgpark_allow_http",
            "aws_subnet.wgpark_puba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wgpark_ngw_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06511d2ab821820c8",
            "connectivity_type": "public",
            "id": "nat-0e57bd381f3dd031b",
            "network_interface_id": "eni-0c9b2059d81517cc0",
            "private_ip": "192.168.0.211",
            "public_ip": "15.164.144.141",
            "subnet_id": "subnet-0532eef20b314707f",
            "tags": {
              "Name": "wgpark-ngw-pria"
            },
            "tags_all": {
              "Name": "wgpark-ngw-pria"
            }
          },
          "dependencies": [
            "aws_subnet.wgpark_puba",
            "aws_vpc.wgpark_vpc",
            "aws_eip.wgpark_eip_pria"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wgpark_ngw_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e80cae9a78e7b31f",
            "connectivity_type": "public",
            "id": "nat-0ac2d315d4b168dc9",
            "network_interface_id": "eni-038914f84d1ac726d",
            "private_ip": "192.168.1.90",
            "public_ip": "3.37.212.230",
            "subnet_id": "subnet-0f743af8f9b70879c",
            "tags": {
              "Name": "wgpark-ngw-pric"
            },
            "tags_all": {
              "Name": "wgpark-ngw-pric"
            }
          },
          "dependencies": [
            "aws_eip.wgpark_eip_pric",
            "aws_subnet.wgpark_pubc",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wgpark_natrt_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:route-table/rtb-07659c3219428a376",
            "id": "rtb-07659c3219428a376",
            "owner_id": "701558900840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e57bd381f3dd031b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wgpark-natrt-pria"
            },
            "tags_all": {
              "Name": "wgpark-natrt-pria"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.wgpark_ngw_pria",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wgpark_natrt_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:route-table/rtb-08a82ff4a6587e64a",
            "id": "rtb-08a82ff4a6587e64a",
            "owner_id": "701558900840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ac2d315d4b168dc9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wgpark-natrt-pric"
            },
            "tags_all": {
              "Name": "wgpark-natrt-pric"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.wgpark_ngw_pric",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wgpark_pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:route-table/rtb-0e09401fea967c44b",
            "id": "rtb-0e09401fea967c44b",
            "owner_id": "701558900840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cd151d30d915311",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wgpark-pubrt"
            },
            "tags_all": {
              "Name": "wgpark-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wgpark_ig",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wgpark_pria_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe20319df56277a8",
            "route_table_id": "rtb-07659c3219428a376",
            "subnet_id": "subnet-0496af87895b9b011"
          },
          "dependencies": [
            "aws_route_table.wgpark_natrt_pria",
            "aws_subnet.wgpark_pria",
            "aws_subnet.wgpark_puba",
            "aws_vpc.wgpark_vpc",
            "aws_eip.wgpark_eip_pria",
            "aws_nat_gateway.wgpark_ngw_pria"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wgpark_pric_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e9269b10eee7283",
            "route_table_id": "rtb-08a82ff4a6587e64a",
            "subnet_id": "subnet-04ccad9207f6380c9"
          },
          "dependencies": [
            "aws_eip.wgpark_eip_pric",
            "aws_nat_gateway.wgpark_ngw_pric",
            "aws_route_table.wgpark_natrt_pric",
            "aws_subnet.wgpark_pric",
            "aws_subnet.wgpark_pubc",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wgpark_puba_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0e1188e540cb4a",
            "route_table_id": "rtb-0e09401fea967c44b",
            "subnet_id": "subnet-0532eef20b314707f"
          },
          "dependencies": [
            "aws_internet_gateway.wgpark_ig",
            "aws_route_table.wgpark_pubrt",
            "aws_subnet.wgpark_puba",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wgpark_pubc_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b017f2e96c5a06e",
            "route_table_id": "rtb-0e09401fea967c44b",
            "subnet_id": "subnet-0f743af8f9b70879c"
          },
          "dependencies": [
            "aws_internet_gateway.wgpark_ig",
            "aws_route_table.wgpark_pubrt",
            "aws_subnet.wgpark_pubc",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wgpark_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:security-group/sg-08eb0105bf0b7fedd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eb0105bf0b7fedd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-wgpark-alb",
            "name_prefix": "",
            "owner_id": "701558900840",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wgpark_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:security-group/sg-0b66a5d07514cd985",
            "description": "Allow Http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "default",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b66a5d07514cd985",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_httpssh",
            "name_prefix": "",
            "owner_id": "701558900840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wgpark-allow-httpssh"
            },
            "tags_all": {
              "Name": "wgpark-allow-httpssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wgpark_allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:security-group/sg-0174e879a69c47fa3",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "default",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0174e879a69c47fa3",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "701558900840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wgpark-allow-rds"
            },
            "tags_all": {
              "Name": "wgpark-allow-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.wgpark_puba",
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wgpark_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:subnet/subnet-0496af87895b9b011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0496af87895b9b011",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701558900840",
            "tags": {
              "Name": "pri-a"
            },
            "tags_all": {
              "Name": "pri-a"
            },
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wgpark_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:subnet/subnet-04ccad9207f6380c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-04ccad9207f6380c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701558900840",
            "tags": {
              "Name": "pri-c"
            },
            "tags_all": {
              "Name": "pri-c"
            },
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wgpark_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:subnet/subnet-0532eef20b314707f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0532eef20b314707f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701558900840",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wgpark_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:subnet/subnet-0f743af8f9b70879c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f743af8f9b70879c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701558900840",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-02eaf698ece68e472"
          },
          "dependencies": [
            "aws_vpc.wgpark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wgpark_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:701558900840:vpc/vpc-02eaf698ece68e472",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c344f639d8039351",
            "default_route_table_id": "rtb-03993e6762606db76",
            "default_security_group_id": "sg-05e0f4329c09d609c",
            "dhcp_options_id": "dopt-02ff66f0f3f020dff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02eaf698ece68e472",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03993e6762606db76",
            "owner_id": "701558900840",
            "tags": {
              "Name": "wgpark-vpc"
            },
            "tags_all": {
              "Name": "wgpark-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}